src/scss/pages/_home.scss
// -----------------------------------------------------------------------------
// This file contains styles that are specific to the home page.
// -----------------------------------------------------------------------------

#what-is-inclusive-design {
  .section__content {
    padding: 8rem 0 0;
    position: relative;

    > * {
      position: relative;
      z-index: 10;
    }

    &::before {
      background: radial-gradient(50% 50% at 50% 50%, $white 0%, rgba(255, 255, 255, 0) 100%) no-repeat 50% 50% / 100% 100%;
      content: "";
      display: block;
      height: 40rem;
      left: -15rem;
      mask-image: url('../images/scatterplot.svg');
      mask-position: center;
      mask-repeat: no-repeat;
      mask-size: cover;
      position: absolute;
      top: -15rem;
      width: 40rem;
    }
  }
}

@media screen and (min-width: 1024px) {
  #what-is-inclusive-design {
    .section__content {
      padding-left: calc(50% + 3rem);
      padding-top: 0;

      &::before {
        height: 56rem;
        left: -14vw;
        top: -16rem;
        width: 56rem;
      }
    }
  }
}

